# sift

./: .gitignore  AGENT.md  Cargo.toml  Makefile  README.md  ROADMAP.md  book.toml  config.example.toml  sift-policy.example.toml  sift-policy.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: AGENT.zh.md  CHECKLIST.md  CHECKLIST.zh.md  README.zh.md  ROADMAP.md  ROADMAP.zh.md  SUMMARY.md  index.md
docs/en/: AGENT.md  README.md
docs/theme/: language.css  language.js
src/: audit.rs  config.rs  extract.rs  main.rs  model.rs  query.rs  react.rs  report.rs  scanner.rs  skills.rs
tests/: agent_gate_json.rs  benchmark_mode.rs  github_intake.rs  query_cli.rs  repo_intake_fixtures.rs
tests/fixtures/repo-intake/: README.md
tests/fixtures/repo-intake/base64-shell/: install.sh
tests/fixtures/repo-intake/benign-controls/: Dockerfile  Makefile  README.md  package-lock.json  package.json  setup.py
tests/fixtures/repo-intake/benign-lockfiles/: Cargo.toml  package-lock.json  package.json
tests/fixtures/repo-intake/cargo-git-dependency/: Cargo.toml
tests/fixtures/repo-intake/docker-curl-pipe/: Dockerfile
tests/fixtures/repo-intake/docker-remote-repo/: Dockerfile
tests/fixtures/repo-intake/docker-root-user/: Dockerfile
tests/fixtures/repo-intake/makefile-hidden-network/: Makefile
tests/fixtures/repo-intake/npm-git-dependency/: package.json
tests/fixtures/repo-intake/npm-postinstall-download/: package.json
tests/fixtures/repo-intake/python-requirements-git/: requirements.txt
tests/fixtures/repo-intake/python-setup-command/: setup.py
tests/fixtures/repo-intake/readme-dangerous-install/: README.md
tests/fixtures/repo-intake/rust-build-command/: build.rs
tests/fixtures/repo-intake/shell-home-write/: install.sh
(+6 files in other folders)
