[package]
name = "sift"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.15"
ignore = "0.4.26"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "0.8"
tree-sitter = "0.26.10"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-containerfile = "0.8.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-dart = "0.2.0"
tree-sitter-go = "0.25.0"
tree-sitter-hcl = "1.1.0"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-sequel = "0.3.11"
tree-sitter-svelte-next = "0.1.1"
tree-sitter-swift = "0.7.3"
tree-sitter-typescript = "0.23.2"
tree-sitter-vue-sqry = "24.0.1"
tree-sitter-yaml = "0.7.2"
tree-sitter-zig = "1.1.2"
ureq = "2"

[profile.release]
# Size-tuned release: trims sift's own code and unwind tables. The bulk of the
# binary is tree-sitter grammar tables (read-only data), which these knobs do
# not shrink; full language coverage is intentionally retained.
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
